# PhotoShare-Python-back

./: .env  .env.example  .gitignore  Dockerfile  README.MD  README.md  build.sh  docker-compose.yml  initialize.sh  main.py  pyproject.toml  requirements.txt  test.db
app/: .coveragerc  main.py  pytest.ini  requirements.txt
app/migrations/: env.py
app/migrations/versions/: 01c7fde1bb85_i_changed_schemas.py  0c352f2e5c6f_adding_comments_schema.py  0eea573817d0_add_phone_birthday.py  0f6c7a4417e2_i_changed_schemas.py  141158139bab_.py  1d06e3b23af5_.py  1fc666b7450b_i_changed_schemas.py  212032fa48ba_i_changed_schemas.py  251abd473797_qrcode_model_added.py  2b0077df03df_photo_models_added_to_db.py  3019bc5f8124_cascade_deletion_for_photo_relations_.py  3a6c921c0136_.py  4578cd9ba148_i_added_3_chose_in_models_for_user_base.py  4c0fddd68399_i_changed_schemas.py  4dbdaab3ad06_i_changed_schemas.py  55c3225b9e0c_init.py  60ef674a7781_.py  64da0241a576_i_changed_schemas.py  64e073935608_i_changed_schemas.py  660ec0712591_.py  7567ca361e18_i_changed_schemas.py  75b905aed1e1_i_changed_schemas.py  (+12 more)
app/src/: schemas.py
app/tests/: comments.py  conftest.py  mock_db.py  test_repository_comments.py  test_repository_photos.py  test_repository_qrcode.py  test_repository_user.py  test_repository_users.py  test_route_auth.py  test_route_comments.py  test_route_photos.py  test_route_users.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 5b7ae610ea47_init.py  84d4cb2c2d63_add_user_role.py  bc09c7f1aaf0_add_table_users.py  f84e0569ea4a_add_verify_for_user.py
postgres-contacts-data/global/: 1260  1262  2671  pg_control
postgres-contacts-data/pg_stat/: pgstat.stat
postgres-data/: postmaster.pid
postgres-data/global/: 1260  1262  pg_control  pg_internal.init
postgres-users-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-users-data/pg_stat/: pgstat.stat
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  roles.py
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_unit_repository_contact.py
(+84 files in other folders)
