[tool.poetry]
name = "photoshare-python-back"
version = "0.1.0"
description = ""
authors = ["Hnatiak <58102343+Hnatiak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
python-multipart = "^0.0.9"
redis = "^5.0.4"
fastapi-limiter = "^0.1.6"
fastapi-mail = "^1.4.1"
passlib = "^1.7.4"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
