[tool.poetry]
name = "photoshare-python-back"
version = "0.1.0"
description = ""
authors = ["Hnatiak <58102343+Hnatiak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
alembic = "1.13.1"
sqlalchemy = "2.0.29"
asyncpg = "0.29.0"
uvicorn = "0.29.0"
pydantic = {version = "2.6.4", extras = ["email"]}
python-jose = {version = "3.3.0", extras = ["cryptography"]}
python-multipart = "0.0.9"
pytest = ">=8.1.1,<8.2.0"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
libgravatar = "1.0.4"
python-dotenv = "1.0.1"
fastapi-mail = "1.4.1"
fastapi-limiter = "0.1.6"
redis = "==4.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
